--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto"> 
                         <li class="nav-item active">
-                            <a class="nav-link" href="Index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Gallery.html">Gallery</a>
